Fix a wrong color in style.default
This line in style.default was using a color from style.turquoise instead of the color used throughout the rest of style.default

--- a/static/css/style.default.css
+++ b/static/css/style.default.css
@@ -255,7 +255,7 @@ ul.list-style-none {
 }
 #top .social a:hover {
   color: #fff;
-  background: #4fbfa8;
+  background: #38a7bb;
   -webkit-transform: scale(1.1);
   transform: scale(1.1);
 }
